Agregue la primeravista para mi pagina

--- a/index.html
+++ b/index.html
@@ -4,8 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi primera pagina</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h1>hola mundo!</h1>
+<body> 
+    
+    <div class="top"> 
+        
+        <img class="rulo" src="c5d6fd7e-7aaa-47ca-8fcd-68466f576eed.png" alt="rulo">
+        <img class="dark" hidden src="download.jpg" alt="" >
+        <img class="yo" src="yo.png" alt="yo">
+        <h1 class="name"><b>Gaspar Alejandro </b>Ahumada</h1>
+        <h2 class="dev">Tecnico Universitario en Programación</h2>
+    </div>
+        <a href="https://developer.mozilla.org/es/docs/Learn/JavaScript/First_steps/What_is_JavaScript"><img src="logojs.png" alt="" class="aprendizaje1"></a>
+        <a href="https://developer.mozilla.org/es/docs/Learn/Getting_started_with_the_web/CSS_basics"><img src="logocss.png" alt="" class="aprendizaje2"></a>
+        <a href="https://developer.mozilla.org/es/docs/Web/HTML"><img src="logohtml.png" alt="" class="aprendizaje3"></a>
+        <a href="https://www.python.org/doc/"><img src="logopython.png" alt="" class="aprendizaje4"></a>
+        <a href="https://doc.qt.io/qt-6/qtdesigner-manual.html"><img src="logoqt.png" alt="" class="aprendizaje5"></a>
+        <a href="https://www.php.net/"><img src="logophp.png" alt="" class="aprendizaje6"></a>
+        <a href="https://react.dev/"><img src="logoreact.png" alt="" class="aprendizaje7"></a>
+    <!-- <div>
+        <img class="muscle" src="MUSCLE.png" alt="">
+    </div> -->
+    <div class="my">
+        <h3>Acerca de mí</h3>
+        <p>
+            Lorem <span style="color: rgb(214, 63, 26);"> HOLA</span>  ipsum <b>dolor </b>  sit amet consectetur adipisicing elit. Repudiandae natus neque nobis, adipisci culpa dignissimos fuga facere saepe sed, perspiciatis debitis ducimus, qui quo commodi distinctio enim doloremque esse illum.
+        </p>
+    </section>
+    <section> 
+
+    </section>
 </body>
 </html>
