agregue algunos proyectos (devbus , btu)

--- a/index.html
+++ b/index.html
@@ -78,5 +78,16 @@
             </li>
         </ul>
     </div>
+    <div class="projects">
+        <h3>Mis proyectos</h3>
+        <div class="devbus">
+            <h4>Vnta de Pasajes</h4>
+            <img src="DevBUS.png" alt="">
+        </div>
+        <div class="btu">
+            <h4>Calculadora de BTU</h4>
+            <img src="BTU.png" alt="">
+        </div>
+    </div>
 </body>
 </html>
