--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi primera pagina</title>
-    <link rel="stylesheet" href="/AkumaxDDD.github.io/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body> 
     
@@ -82,11 +82,11 @@
         <h3>Mis proyectos</h3>
         <div class="devbus">
             <h4>Vnta de Pasajes</h4>
-            <img src="DevBUS.png" alt="">
+            <img class="imgdevbus" src="DevBUS.png" alt="" >
         </div>
         <div class="btu">
             <h4>Calculadora de BTU</h4>
-            <img src="BTU.png" alt="">
+            <img class="imgbtu" src="BTU.png" alt="">
         </div>
     </div>
 </body>
