se agrego fuente de google fonts y se agrego carpeta para imagenes

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Jersey+15&display=swap" rel="stylesheet">
 </head>
 <body class="contactame">
     <div class="formcontact">
@@ -29,7 +30,7 @@
                             <label>Mensaje</label>
             <textarea name="" id="" cols="18" rows="10" placeholder="DEJE SU MENSAJE AQUI"></textarea>
         </div> 
-        <button class="send"><a href="index.html"><img class="contactimg" src="send.png" alt=""></a></button> 
+        <button class="send"><a href="index.html"><img class="contactimg" src="img/send.png" alt=""></a></button> 
     </div>    
 </body>
 </html>
