cambio en type de input telefono

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         </div>
         <div class="datos">
             <label> Telefono</label>
-            <input type="number" placeholder="Telefono">
+            <input type="text" placeholder="Telefono">
         </div>
         <div class="datos">
             <label> Mail</label>
